# AI-Powered-Smart-Email-Classifier

./: .gitignore  Procfile  README.md  integration_layer_api.py  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
module2_trained_models/: best_email_classifier.pkl
module3_trained_models/: best_urgency_classifier.pkl  tfidf_vectorizer.pkl  urgency_rule_config.json
