[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-email-classifier"
version = "1.0.0"
description = "AI-powered smart email classifier for enterprises"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "streamlit==1.28.1",
    "pandas==1.5.3",
    "numpy==1.23.5",
    "scikit-learn==1.2.2",
    "joblib==1.3.2",
    "plotly==5.14.0",
    "pydantic==2.3.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
