[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-email-classifier"
version = "1.0.0"
description = "AI-powered smart email classifier for enterprises"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.32.0",
    "pandas>=2.1.3",
    "numpy>=1.26.3",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.2",
    "plotly>=5.18.0",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
